--- a/eam/common/generator/src/main/resources/templates/PageController.java.vm
+++ b/eam/common/generator/src/main/resources/templates/PageController.java.vm
@@ -9,10 +9,21 @@ public class #(simpleName) {
 	
 	public static final String prefix="#(uriPrefix)";
 
-	#if(!isFrontendDepart)
-	@Autowired
-	private #(serviceSimpleName) #(serviceVarName);
-	#end
+	private #(proxyName) proxy;
+	
+	/**
+	 * 获得代理对象<br> 
+	 * 1、单体应用时，在应用内部调用；<br> 
+	 * 2、前后端分离时，通过配置，以Rest方式调用后端；<br> 
+	 * 3、微服务时，通过feign调用; <br> 
+	 * */
+	public #(proxyName) proxy() {
+		if(proxy==null) {
+			proxy=#(proxyName).api();
+		}
+		return proxy;
+	}
+	
 	/**
 	 * #(topic) 功能主页面
 	 */
