--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -17,7 +17,7 @@
 
 <body>
 
-<form id="data-form" lay-filter="data-form" class="layui-form model-form">
+<form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
     #for(f : hiddenFields)
     <input name="#(f.varName)" id="#(f.varName)"  type="hidden"/>
     #end
@@ -44,12 +44,26 @@
         </div>
     </div>
     
+	#else if(f.isRadioField)
+	
+    <div class="layui-form-item">
+        <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+        <div class="layui-input-block">
+        	#if(f.radioField.dict!=null)
+            <input type="radio" name="#(f.varName)" lay-filter="#(f.varName)" th:each="e,stat:${enum.toArray('org.github.foxnic.web.constants.enums.MenuType')}" th:value="${e.code}" th:title="${e.text}">
+            #end
+            #if(f.radioField.enumTypeName!=null)
+            <input type="radio" name="#(f.varName)" lay-filter="#(f.varName)" th:each="e,stat:${enum.toArray('#(f.radioField.enumTypeName)')}" th:value="${e.code}" th:title="${e.text}">
+            #end
+        </div>
+    </div>
+    
     #else if(f.isMulitiLine)
     
         <div class="layui-form-item">
         <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
         <div class="layui-input-block">
-            <textarea id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('#(f.label)') }" class="layui-textarea" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml)></textarea>
+            <textarea lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('#(f.label)') }" class="layui-textarea" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml)></textarea>
         </div>
     </div>
     
@@ -58,7 +72,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
         <div class="layui-input-block">
-            <input id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('#(f.label)') }" type="text" class="layui-input" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml) />
+            <input lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('#(f.label)') }" type="text" class="layui-input" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml) />
         </div>
     </div>
     
