--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -37,9 +37,10 @@ function FormPage() {
       */
 	function renderFormFields() {
 		form.render();
-	    //渲染图片字段
+	   
 	    #for(f : fields)
 	    #if(f.isImageField) 
+	    //渲染图片字段
 	    fox.renderSimpleUpload("##(f.varName)","##(f.varName)-button","##(f.varName)-image");
 	    #end
 	    #end
@@ -50,8 +51,9 @@ function FormPage() {
       */
 	function fillFormData() {
 		var formData = admin.getTempData('#(formDataKey)');
+		var fm=$('#data-form');
 		if (formData) {
-			$('#data-form')[0].reset();
+			fm[0].reset();
 			form.val('data-form', formData);
 	     	//设置并显示图片
 	     	#for(f : fields)
@@ -61,8 +63,19 @@ function FormPage() {
 		    }
 		    #end
 		    #end
-	     	$('#data-form').attr('method', 'POST');
+	     	fm.attr('method', 'POST');
+	     	renderFormFields();
 		}
+		
+		//渐显效果
+		fm.css("opacity","0.0");
+        fm.css("display","");
+        setTimeout(function (){
+            fm.animate({
+                opacity:'1.0'
+            },100);
+        },1);
+        
 	}
 	
 	/**
@@ -81,9 +94,10 @@ function FormPage() {
 		    #end
 	    	
 	    	var api=moduleURL+"/"+(data.field.#(idPropertyName)?"update":"insert");
-	        layer.load(2);
+	        var task=setTimeout(function(){layer.load(2);},1000);
 	        admin.request(api, data.field, function (data) {
-	            layer.closeAll('loading');
+	            clearTimeout(task);
+			    layer.closeAll('loading');
 	            if (data.success) {
 	                layer.msg(data.message, {icon: 1, time: 500});
 	                admin.finishPopupCenter();
