--- a/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
@@ -1,22 +1,9 @@
 package #(package);
 
-import java.lang.reflect.Field;
-import java.util.Date;
-import java.util.List;
 
 import javax.annotation.Resource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import com.github.foxnic.commons.busi.id.IDGenerator;
-import com.github.foxnic.dao.data.PagedList;
-import com.github.foxnic.dao.data.SaveMode;
-import com.github.foxnic.dao.entity.SuperService;
-import com.github.foxnic.dao.spec.DAO;
-import com.github.foxnic.springboot.api.error.ErrorDesc;
-import com.github.foxnic.springboot.mvc.Result;
-import com.github.foxnic.sql.expr.ConditionExpr;
-import com.github.foxnic.sql.meta.DBField;
 
 #(imports)
 
@@ -44,7 +31,7 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	
 	/**
 	 * 插入实体
-	 * @param role 实体数据
+	 * @param #(poVar) 实体数据
 	 * @return 插入是否成功
 	 * */
 	@Override
@@ -54,7 +41,7 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	
 	/**
 	 * 批量插入实体，事务内
-	 * @param roleList 实体数据清单
+	 * @param #(poListVar) 实体数据清单
 	 * @return 插入是否成功
 	 * */
 	@Override
@@ -66,7 +53,7 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	
 	/**
 	 * 更新实体
-	 * @param role 数据对象
+	 * @param #(poVar) 数据对象
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
@@ -77,7 +64,7 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	
 	/**
 	 * 更新实体集，事务内
-	 * @param roleList 数据对象列表
+	 * @param #(poListVar) 数据对象列表
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
@@ -132,14 +119,34 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	/**
 	 * 检查 角色 是否已经存在
 	 *
-	 * @param roleVO 数据对象
+	 * @param #(poVar) 数据对象
 	 * @return 判断结果
 	 */
-	public Result<#(poSimpleName)> checkExists(#(poSimpleName) role) {
+	public Result<#(poSimpleName)> checkExists(#(poSimpleName) #(poVar)) {
 		//TDOD 此处添加判断段的代码
-		//boolean exists=this.checkExists(role, SYS_ROLE.NAME);
+		//boolean exists=this.checkExists(#(poVar), SYS_ROLE.NAME);
 		//return exists;
 		return ErrorDesc.success();
+	}
+
+	@Override
+	public ExcelWriter exportExcel(#(poSimpleName) sample) {
+		return super.exportExcel(sample);
+	}
+
+	@Override
+	public ExcelWriter exportExcelTemplate() {
+		return super.exportExcelTemplate();
+	}
+
+	@Override
+	public List<ValidateResult> importExcel(InputStream input,int sheetIndex,boolean batch) {
+		return super.importExcel(input,sheetIndex,batch);
+	}
+
+	@Override
+	public ExcelStructure buildExcelStructure(boolean isForExport) {
+		return super.buildExcelStructure(isForExport);
 	}
 
 }
