--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
-    <link rel="stylesheet" href="/module/formSelects/formSelects-v4.css"/>
     <link rel="stylesheet" href="/assets/css/foxnic-web.css">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
 
 <body>
@@ -63,7 +63,7 @@
         <div class="layui-form-item">
         <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
         <div class="layui-input-block">
-            <textarea lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('#(f.label)') }" class="layui-textarea" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml)></textarea>
+            <textarea lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('#(f.label)') }" class="layui-textarea" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml)></textarea>
         </div>
     </div>
     
@@ -72,7 +72,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
         <div class="layui-input-block">
-            <input lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('#(f.label)') }" type="text" class="layui-input" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml) />
+            <input lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('#(f.label)') }" type="text" class="layui-input" #(f.layVerifyHtml) #(f.maxLenHtml) #(f.requiredHtml) />
         </div>
     </div>
     
@@ -81,7 +81,7 @@
     #end
 
     <div class="layui-form-item model-form-footer">
-        <button class="layui-btn layui-btn-primary" ew-event="closeDialog" type="button" th:text="${lang.translate('取消')}">取消</button>
+        <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}">取消</button>
         <button class="layui-btn"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
     </div>
 </form>
