--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -19,7 +19,7 @@ function FormPage() {
 		fillFormData();
 		
 		//绑定提交事件
-		bindSubmitEvent();
+		bindButtonEvent();
 		
 		//调整窗口的高度与位置
 		adjustPopup();
@@ -81,7 +81,7 @@ function FormPage() {
 	/**
       * 保存数据，表单提交事件
       */
-    function bindSubmitEvent() {
+    function bindButtonEvent() {
     
 	    form.on('submit(submit-button)', function (data) {
 	    	//debugger;
@@ -108,6 +108,9 @@ function FormPage() {
 	        
 	        return false;
 	    });
+	    
+	    //关闭窗口
+	    $("#cancel-button").click(function(){admin.closePopupCenter();});
 	    
     }
 
