--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -38,7 +38,7 @@ function ListPage() {
      /**
       * 渲染表格
       */
-     function renderTable() {
+    function renderTable() {
      
 		fox.renderTable({
 			elem: '#data-table',
@@ -48,13 +48,26 @@ function ListPage() {
             where: { #(parentIdVar) : #(parentIdVar) } ,
             #end
 			cols: [[
-			 	{ type:'checkbox' },
-                { type: 'numbers' },
+			 	{  fixed: 'left',type:'checkbox' },
+                {  fixed: 'left',type: 'numbers' },
                 #for(f : fields)
                 { field: '#(f.varName)', sort: true, title: fox.translate('#(f.label)')#(f.templet) } ,
                 #end
-                { fixed: 'right', align: 'center', toolbar: '#tableOperationTemplate', title: fox.translate('操作'), width: 175 }
+                { field: 'row-ops', fixed: 'right', align: 'center', toolbar: '#tableOperationTemplate', title: fox.translate('操作'), width: 125 }
             ]]
+	 		,footer : {
+				exportExcel : true,
+				importExcel : {
+					params : {} ,
+				 	callback : function(r) {
+						if(r.success) {
+							layer.msg(fox.translate('数据导入成功')+"!");
+						} else {
+							layer.msg(fox.translate('数据导入失败')+"!");
+						}
+					}
+			 	}
+		 	}
         });
         #if(hasLogicField)
         //绑定 Switch 切换事件
@@ -64,16 +77,19 @@ function ListPage() {
         #end
         #end
         #end
-        
-     };
+        //绑定排序事件
+        table.on('sort(data-table)', function(obj){
+		  refreshTableData(obj.field,obj.type);
+        });
+    };
      
 	/**
       * 刷新表格数据
       */
-	function refreshTableData() {
+	function refreshTableData(sortField,sortType) {
 		var field = $('#search-field').val();
 		var value = $('#search-input').val();
-		var ps={searchField: field, searchValue: value};
+		var ps={searchField: field, searchValue: value,sortField:sortField,sortType:sortType};
 		#if(isTree) 
 		// 树形结构锁定上级ID
 		ps.#(parentIdVar)=#(parentIdVar);
@@ -176,7 +192,7 @@ function ListPage() {
 			layer.confirm(fox.translate('确定删除已选中的')+fox.translate('#(topic)')+fox.translate('吗？'), function (i) {
 				layer.close(i);
 				layer.load(2);
-                admin.request(moduleURL+"/batch-delete", JSON.stringify({ #(idsPropertyName): JSON.stringify(ids) }), function (data) {
+                admin.request(moduleURL+"/batch-delete", { #(idsPropertyName): ids }, function (data) {
                     layer.closeAll('loading');
                     if (data.success) {
                         layer.msg(data.message, {icon: 1, time: 500});
@@ -246,7 +262,7 @@ function ListPage() {
      */
 	function showEditForm(data) {
 		var queryString="";
-		if(data) queryString="?" + #(paramQueryString);
+		if(data && data.#(idPropertyName)) queryString="?" + #(paramQueryString);
 		admin.putTempData('#(formDataKey)', data);
 		var area=admin.getTempData('#(formAreaKey)');
 		var height= (area && area.height) ? area.height : ($(window).height()*0.6);
