--- a/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_form.html
@@ -2,7 +2,7 @@
 /**
  * 品牌 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-06-10 14:30:18
+ * @since 2021-06-19 20:16:33
  */
  -->
  <!DOCTYPE html>
@@ -15,25 +15,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
-    <link rel="stylesheet" href="/module/formSelects/formSelects-v4.css"/>
+    <link rel="stylesheet" href="/assets/css/foxnic-web.css">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
 
 <body>
 
-<form id="data-form" lay-filter="data-form" class="layui-form model-form">
+<form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
     <input name="id" id="id"  type="hidden"/>
     
     <div class="layui-form-item">
         <label class="layui-form-label" th:text="${lang.translate('名称')}">名称</label>
         <div class="layui-input-block">
-            <input id="name" name="name" th:placeholder="${ lang.translate('请输入') +' '+ lang.translate('名称') }" type="text" class="layui-input"    />
+            <input lay-filter="brandName" id="brandName" name="brandName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"    />
         </div>
     </div>
     
 	
 
     <div class="layui-form-item model-form-footer">
-        <button class="layui-btn layui-btn-primary" ew-event="closeDialog" type="button" th:text="${lang.translate('取消')}">取消</button>
+        <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}">取消</button>
         <button class="layui-btn"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
     </div>
 </form>
