--- a/eam/common/generator/src/main/resources/templates/list.html.vm
+++ b/eam/common/generator/src/main/resources/templates/list.html.vm
@@ -15,7 +15,7 @@
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
 
-<body>
+<body style="overflow-y: hidden">
 
 <div class="layui-card">
  
