--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -27,9 +27,12 @@ function FormPage() {
 	}
 	
 	function adjustPopup() {
-		var height=document.body.clientHeight+58;
-		admin.changePopupArea(null,height);
-		admin.putTempData('#(formAreaKey)', {height:height});
+		setTimeout(function () {
+			var body=$("body");
+			var bodyHeight=body.height();
+			var area=admin.changePopupArea(null,bodyHeight);
+			admin.putTempData('#(formAreaKey)', area);
+		},50);
 	}
 	
 	/**
@@ -41,7 +44,59 @@ function FormPage() {
 	    #for(f : fields)
 	    #if(f.isImageField) 
 	    //渲染图片字段
-	    fox.renderSimpleUpload("##(f.varName)","##(f.varName)-button","##(f.varName)-image");
+	    fox.renderFormUpload({
+			el:"#(f.varName)",
+			upload:function (result,index,upload) {
+				console.log("文件上传后回调")
+			},
+			remove:function (fileId,index,upload) {
+				console.log("文件删除后回调")
+			}
+	    });
+		#else if(f.isSelectField)
+		//渲染下拉字段
+		fox.renderSelectBox({
+			el: "#(f.varName)",
+			radio: #(!f.selectField.muliti),
+			filterable: true,
+			toolbar: {show:true,showIcon:true,list:[ "ALL", "CLEAR","REVERSE"]},
+			//转换数据
+			#if(f.selectField.enumTypeName!=null)
+			transform:function(data) {
+				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
+				var opts=[];
+				if(!data) return opts;
+				for (var i = 0; i < data.length; i++) {
+					opts.push({name:data[i].text,value:data[i].code});
+				}
+				return opts;
+			}
+			#end
+			#if(f.selectField.queryApi!=null)
+			searchField: "name", //请自行调整用于搜索的字段名称
+			extraParam: {}, //额外的查询参数，Object 或是 返回 Object 的函数
+			transform: function(data) {
+				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
+				var opts=[];
+				if(!data) return opts;
+				for (var i = 0; i < data.length; i++) {
+					//请自行调整此处字段的对应关系
+					opts.push({name:data[i].name,value:data[i].id});
+				}
+				return opts;
+			}
+			#end
+			#if(f.selectField.dictCode!=null)
+			transform: function(data) {
+				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
+				var opts=[];
+				for (var i = 0; i < data.length; i++) {
+					opts.push({name:data[i].text,value:data[i].code});
+				}
+				return opts;
+			}
+			#end
+		});
 	    #end
 	    #end
 	}
@@ -55,14 +110,27 @@ function FormPage() {
 		if (formData) {
 			fm[0].reset();
 			form.val('data-form', formData);
-	     	//设置并显示图片
+
 	     	#for(f : fields)
 		    #if(f.isImageField)
+			//设置  #(f.label)  显示图片
 		    if($("##(f.varName)").val()) {
 		    	$("##(f.varName)-image").attr("src","/service-storage/sys-file/download?id="+$("##(f.varName)").val());
 		    }
 		    #end
 		    #end
+
+			#for(f : fields)
+			#if(f.isSelectField)
+			//设置 #(f.label) 下拉框选中值
+			if (formData.#(f.selectField.fillBy))	{
+				var #(f.varName)Select=xmSelect.get("##(f.varName)",true)
+				var #(f.varName)Opionts=#(f.varName)Select.options.transform(formData.#(f.selectField.fillBy));
+				#(f.varName)Select.setValue(#(f.varName)Opionts);
+			}
+			#end
+			#end
+
 	     	fm.attr('method', 'POST');
 	     	renderFormFields();
 		}
@@ -86,13 +154,22 @@ function FormPage() {
 	    form.on('submit(submit-button)', function (data) {
 	    	//debugger;
 	    	
-	    	//处理逻辑值
+
 	    	#for(f : fields)
-		    #if(f.isLogicField) 
+		    #if(f.isLogicField)
+			//处理 #(f.label) 默认值
 		    if(!data.field.#(f.varName)) data.field.#(f.varName)=0;
 		    #end
 		    #end
-	    	
+
+
+			#for(f : fields)
+			#if(f.isSelectField)
+			//获取 #(f.label) 下拉框的值
+			data.field["#(f.varName)"]=xmSelect.get("##(f.varName)",true).getValue("value");
+			#end
+			#end
+
 	    	var api=moduleURL+"/"+(data.field.#(idPropertyName)?"update":"insert");
 	        var task=setTimeout(function(){layer.load(2);},1000);
 	        admin.request(api, data.field, function (data) {
